--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Laura Bootstrap Template - Index</title>
+  <title>joohi-Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -217,7 +217,7 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Me</h3>
-                  <p>juhisuryavanshi388@gmail.com</p>
+                  <a href="mailto:juhisuryavanshi388@gmail.com">juhisuryavanshi388@gmail.com</a></span></li>
                 </div>
               </div>
               <div class="col-md-6">
