--- a/index.html
+++ b/index.html
@@ -232,10 +232,11 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="mailto:juhisuryavanshi388@gmail.com" method="post" enctype="text/plain" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/xayrgpny" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" 
+                  required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
                   <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
@@ -249,7 +250,7 @@
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <div class="error-message">Your message has been sent. Thank you!</div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
